crates/toml_edit/tests/fixtures/invalid/table-array-malformed-bracket.stderr
TOML parse error at line 1, column 9
  |
1 | [[albums]
  |         ^
Unexpected `]`
Expected `.` or `]]`
While parsing a Table Header
